<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="190dp"
    android:layout_height="300dp"
    android:layout_margin="8dp"
    android:elevation="6dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageItem"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_baseline_refresh_24" />

        <Button
            android:id="@+id/favorite"
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/favorite"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageItem" />

        <TextView
            android:id="@+id/sale"
            android:layout_width="39dp"
            android:layout_height="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/ic_backgroundsale"
            android:gravity="center"
            android:text="@string/sale"
            android:visibility="invisible"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageItem" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="17dp"
            android:gravity="top"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sale" />

        <TextView
            android:id="@+id/old_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:gravity="top"
            android:text="@string/old_price"
            android:visibility="invisible"
            android:textColor="@color/colorOldPrice"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/price"
            app:layout_constraintTop_toTopOf="@+id/price" />


        <TextView
            android:id="@+id/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="top"
            android:text="@string/status_text"
            android:textColor="@color/colorGrey"
            android:textSize="10sp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar_small"
            app:layout_constraintEnd_toEndOf="@+id/ratingBar_small"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <RatingBar
            android:id="@+id/ratingBar_small"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:theme="@style/MyRatingBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/numberOfReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/numberOfReviews"
            android:textSize="12sp"
            android:textColor="@color/colorGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ratingBar_small" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>